# Noiz2

./: .gitignore  CMakeLists.txt  prompt.txt
src/: MusicLibrary.cpp  MusicLibrary.h  Playlist.cpp  Playlist.h  Song.cpp  Song.h  main.cpp
